# ToxiMol

./: .gitignore  .gitmodules  LICENSE  README.md  load_task_data_modified.py  main.py  pyproject.toml  requirements.txt  run_multiple_evaluations.py
Experimental_dataset/: repair_prompt_ablation.json
Experimental_dataset/ames/: ames.json
Experimental_dataset/clintox/: clintox.json  clintox_prompt.json
Experimental_dataset/dili/: dili.json  dili_prompt.json
Experimental_dataset/herg/: herg.json  herg_prompt.json
Experimental_dataset/herg_central/: herg_central.json
Experimental_dataset/herg_karim/: herg_karim.json
Experimental_dataset/ld50_zhu/: ld50_zhu.json
Experimental_dataset/skin_reaction/: skin_reaction_prompt.json
Experimental_dataset/tox21/: tox21.json  tox21_prompt.json
Experimental_dataset/toxcast/: toxcast.json  toxcast_prompt.json
annotation/: ames_prompt.json  carcinogens_lagunin_prompt.json  ld50_zhu_prompt.json  repair_prompt.json
data/Experimental_dataset/carcinogens_lagunin/: carcinogens_lagunin.json
data/Experimental_dataset/herg_central/: herg_central_prompt.json
data/Experimental_dataset/herg_karim/: herg_karim_prompt.json
data/Experimental_dataset/skin_reaction/: skin_reaction.json
evaluation/: __init__.py  evaluation_models.py  extract_smiles.py  molecule_utils.py  result_evaluator.py  run_evaluation.py  sascorer.py  task_mappings.py
experiments/ablation/: __init__.py  extract_repair_results.py  nontoxicity_threshold_analysis.py  run_criteria_ablation.py  run_criteria_ablation_cmd.py  run_multiple_ablations.py  run_nontoxicity_analysis.py  run_threshold_ablations.py  toxicity_probability_threshold_analysis.py  toxicity_threshold_analysis.py
experiments/claude/: clean_thinking_results.py  run_ablation_experiment.py  run_claude_models.py  run_claude_models_no_image.py  run_herg_ablation.py  run_herg_unified_evaluation.py
experiments/eval_results/InternVL3-14B/all_tasks/: all_tasks_evaluation_summary.csv  all_tasks_evaluation_summary.json  tox21_subtasks_evaluation_summary.csv  tox21_subtasks_evaluation_summary.json  toxcast_subtasks_evaluation_summary.csv  toxcast_subtasks_evaluation_summary.json
experiments/evaluation/: evaluation_models.py  run_evaluation.py
experiments/gpt/: README.md  run_inference_models.py  run_toxicity_repair.py
experiments/multimodal/: run_multimodal_models.py
experiments/opensource/: deepseekvl2.py  internvl3.py  llava-one-vision copy.py  llava-one-vision.py  llavaonevision.py  qwen2_5vl.py  run_opensource.py  run_opensource_hf.py
(+43 files in other folders)
