[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toximol"
version = "1.0.0"
description = "ToxiMol: A Benchmark for Structure-Level Molecular Detoxification"
authors = [
    { name = "ToxiMol Team", email = "feilin@ieee.org" },
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["MLLMs", "molecular", "toxicity", "benchmark", "drug-discovery"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "datasets>=2.19.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.35.0",
    "rdkit-pypi>=2023.9.1",
    "Pillow>=10.0.0",
    "requests>=2.31.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "pre-commit>=3.0.0",
    "jupyter>=1.0.0",
    "ipython>=8.0.0",
    "tqdm>=4.65.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "myst-parser>=0.18.0",
]

[project.urls]
Homepage = "https://github.com/DeepYoke/ToxiMol"
Repository = "https://github.com/DeepYoke/ToxiMol"
Documentation = "https://github.com/DeepYoke/ToxiMol"
"Bug Tracker" = "https://github.com/DeepYoke/ToxiMol/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["evaluation*", "experiments*", "annotation*"]
exclude = ["tests*", "docs*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "docs/source/conf.py",
    "old",
    "build",
    "dist",
    ".eggs",
    "*.egg",
] 